modificacion en los strings
-se cambio el campo ingrese contraseña

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="ingrese_nombre">Ingrese su nombre</string>
     <string name="ingrese_apellido">Ingrese su apellido</string>
     <string name="ingrese_correo">Ingrese su correo</string>
-    <string name="ingese_contra">Ingese su contraseña</string>
+    <string name="ingese_contra">Ingrese su contraseña</string>
     <string name="repita_contra">Repita su contraseña</string>
 </resources>
